# micro_ros_controller_firmware

./: .gitignore  .gitmodules  README.md  WIP.md
.west/: config
app-manifest/: west.yml
apps/accel_polling/: CMakeLists.txt  adxl362-stream.conf  prj.conf  sample.yaml  spi.conf  spi.overlay  test.overlay
apps/accel_trig/: CMakeLists.txt  adxl362-trigger.conf  prj.conf  spi.conf  spi.overlay  test.overlay
apps/accel_trig/src/: main.c
apps/rover_controller/: CMakeLists.txt  Kconfig  prj.conf
apps/rover_controller/boards/: nucleo_h723zg.overlay
apps/rover_controller/src/: main.c
apps/rover_controller/src/algo/: MadgwickAHRS.c  MadgwickAHRS.h
apps/rover_controller/src/app/: control_loop.c  control_loop.h  diagnostics.c  diagnostics.h  kinematics.c  kinematics.h  odometry.c  odometry.h  robot_command.c  robot_command.h  state_machine.c  state_machine.h
apps/rover_controller/src/common/: robot_params.h  robot_types.h  time_utils.c  time_utils.h
apps/rover_controller/src/hal/: gnss.c  gnss.h  imu.c  imu.h  sensor_types.h
apps/rover_controller/src/ros/: node.c  node.h
apps/rover_controller/src/ros/publishers/: battery_pub.c  battery_pub.h  diagnostics_pub.c  diagnostics_pub.h  gnss_pub.c  gnss_pub.h  heartbeat_pub.c  heartbeat_pub.h  imu_pub.c  imu_pub.h  odom_pub.c  odom_pub.h  wheel_states_pub.c  wheel_states_pub.h
apps/rover_controller/src/ros/subscribers/: cmd_vel_sub.c  cmd_vel_sub.h
apps/rover_controller/src/safety/: fault.c  fault.h  limits.h  safety_monitor.c  safety_monitor.h  watchdog.c  watchdog.h
docs/: architecture.md
dts/bindings/sensor/: invensense,icg20660l.yaml
memory/: icg20660l-high-odr-trigger-fix.md
